--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ networks:
 
 services:
   unbound:
-    image: "mvance/unbound:latest"
+    image: "image: "mvance/unbound-rpi""
     container_name: unbound
     restart: unless-stopped
     hostname: "unbound"
